--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,22 +1,35 @@
 <%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/cart.css">
     </head>
+
     <body>
         <%- include('../includes/navigation.ejs') %>
-        <main>
-            <% if (products.length> 0) { %>
-                <ul>
-                    <% for (let product of products) { %>
-                        <li>
-                            <p><%=product.productData.title%> <%=product.qty%></p>
-                            <form action="/cart-delete-item" method="POST">
-                                <input type="hidden" name="productId" value="<%=product.productData.id%>">
-                                <button type="submit">Delete</button>
-                            </form>
-                        </li>
+            <main>
+                <% if (products.length> 0) { %>
+                    <ul class="cart__item-list">
+                        <% products.forEach(p=> { %>
+                            <li class="cart__item">
+                                <h1>
+                                    <%= p.productId.title %>
+                                </h1>
+                                <h2>Quantity: <%= p.quantity %>
+                                </h2>
+                                <form action="/cart-delete-item" method="POST">
+                                    <input type="hidden" value="<%= p.productId._id %>" name="productId">
+                                    <button class="btn danger" type="submit">Delete</button>
+                                </form>
+                            </li>
+                            <% }) %>
+                    </ul>
+                    <hr>
+                    <div class="centered">
+                        <form action="/create-order" method="POST">
+                            <button type="submit" class="btn">Order Now!</button>
+                        </form>
+                    </div>
+
+                    <% } else { %>
+                        <h1>No Products in Cart!</h1>
                         <% } %>
-                </ul>
-            <% } else { %>
-                    <h1>No Products Found!</h1>
-            <% } %>
-        </main>
+            </main>
             <%- include('../includes/end.ejs') %>
