--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -16,7 +16,7 @@
                 <input type="password" name="password" id="password">
             </div>
             <input type="hidden" name="userId" value="<%= userId %>">
-            <input type="hidden" name="token" value="<%= token>">
+            <input type="hidden" name="token" value="<%= token %>">
             <button class="btn" type="submit">Update Password</button>
         </form>
     </main>
