adding checkout page

--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -20,6 +20,9 @@
                         </li>
                     <% }); %>
                 </ul>
+                <div class="centered">
+                    <a href="/" class="btn">Back to Shop Page</a>
+                </div>
             <% } %>
         </main>
         <%- include('../includes/end.ejs') %>
