--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -20,9 +20,7 @@
                 </ul>
                 <hr>
                 <div class="centered">
-                    <form action="/create-order" method="POST">
-                        <button type="submit" class="btn">Order Now!</button>
-                    </form>
+                    <a href="/checkout" class="btn">Order Now</a>
                 </div>
                 
             <% } else { %>
