--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -7,27 +7,35 @@
         <%- include('../includes/navigation.ejs') %>
 
             <main>
+                <% if (errorMessage) { %>
+                    <div class="user-message user-message--error"><%= errorMessage %></div>
+                <% } %>
                 <form class="product-form"
                     action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST">
                     <div class="form-control">
                         <label for="title">Title</label>
                         <input type="text" name="title" id="title"
-                            value="<% if (editing) { %><%= product.title %><% } %>">
+                        class="<%= validationErrors.find(e => e.path === 'title') ? 'invalid' : '' %>"
+
+                            value="<% if (editing || hasError) { %><%= product.title %><% } %>">
                     </div>
                     <div class="form-control">
                         <label for="imageUrl">Image URL</label>
                         <input type="text" name="imageUrl" id="imageUrl"
-                            value="<% if (editing) { %><%= product.imageUrl %><% } %>">
+                        class="<%= validationErrors.find(e => e.path === 'imageUrl') ? 'invalid' : '' %>"
+                            value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>">
                     </div>
                     <div class="form-control">
                         <label for="price">Price</label>
                         <input type="number" name="price" id="price" step="0.01"
-                            value="<% if (editing) { %><%= product.price %><% } %>">
+                        class="<%= validationErrors.find(e => e.path === 'price') ? 'invalid' : '' %>"
+                            value="<% if (editing || hasError) { %><%= product.price %><% } %>">
                     </div>
                     <div class="form-control">
                         <label for="description">Description</label>
                         <textarea name="description" id="description"
-                            rows="5"><% if (editing) { %><%= product.description %><% } %></textarea>
+                        class="<%= validationErrors.find(e => e.path === 'description') ? 'invalid' : '' %>"
+                            rows="5"><% if (editing || hasError) { %><%= product.description %><% } %></textarea>
                     </div>
                     <% if (editing) { %>
                         <input type="hidden" name="productId" value="<%= product.id %>">
